# 42-python-modules

python-00/ex0/: ft_hello_garden.py
python-00/ex1/: ft_plot_area.py
python-00/ex2/: ft_harvest_total.py
python-00/ex3/: ft_plant_age.py
python-00/ex4/: ft_water_reminder.py
python-00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python-00/ex6/: ft_garden_summary.py
python-00/ex7/: ft_seed_inventory.py
python-01/ex0/: ft_garden_intro.py
python-01/ex1/: ft_garden_data.py
python-01/ex2/: ft_plant_growth.py
python-01/ex3/: ft_plant_factory.py
python-01/ex4/: ft_garden_security.py
python-01/ex5/: ft_plant_types.py
python-01/ex6/: ft_garden_analytics.py
python-02/ex0/: ancient_fragment.txt  ft_ancient_text.py  ft_first_exception.py
python-02/ex1/: ft_archive_creation.py  (+2 more)
python-04/: clear  elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py  sample_data.json
python-06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_circular_curse.py  ft_distillation_0.py  ft_distillation_1.py  ft_import_transmutation.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_pathway_debate.py  ft_sacred_scroll.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
python-07/: battle.py  capacitor.py  tournament.py
python-08/ex1/: loading.py  pyproject.toml  requirements.txt
(+96 files in other folders)
