[tool.poetry]
name = "matrix-loader"
version = "0.1.0"
description = "Matrix Data Analysis"
authors = ["Data Architect <architect@zion.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
